--- a/_posts/2020-08-14-blog-05.md
+++ b/_posts/2020-08-14-blog-05.md
@@ -16,7 +16,6 @@ This section contains data information, source, organization and interest about.
 
 ### Where is the dataset from?
 
-
 - This dataset was constructed by YOOCHOOSE GmbH to support participants in the RecSys Challenge 2015.
 - The dataset can be download in https://www.kaggle.com/chadgostopp/recsys-challenge-2015
 - The YOOCHOOSE dataset contains a collection of sessions from a retailer, where each session is encapsulating the click events that the user performed in the session. For some of the sessions, there are also buy events; means that the session ended with the user bought something from the webshop. The data was collected during several months in the year of 2014, reflecting the clicks and purchases performed by the users of an online retailer in Europe. 
@@ -65,7 +64,7 @@ In addition, to create more insights for exploratory analysis we create:
   - A label column that can be True or False. True if a user session terminates with purchased items, False if not.
 
 
-Note: The dataset is very large with a total of 9249729 sessions and 33 million rows. To simplify the problem we reduce the dataset to 10\% so that it is easier to calculate the columns.
+Note: The dataset is very large with a total of 9249729 sessions and 33 million rows. To simplify the problem we reduce the dataset to 10% so that it is easier to calculate the columns.
 
 
 ## Exploratory Data Analysis
@@ -111,101 +110,74 @@ Since we know the distribution of session sizes, it’s interesting to know if t
 
 ### How much a time data (hour, weekday, month, etc) affect the buying rate?
 
-Something interesting to know is whether time is important in the purchase intention. Intuitively, it is possible to say that there are days and times more likely for someone to buy. -->
+Something interesting to know is whether time is important in the purchase intention. Intuitively, it is possible to say that there are days and times more likely for someone to buy. 
 
-<center><img src="{{ site.url }}{{ site.baseurl }}/img/posts/04/hour-buying-rate.png" style="max-width: 50%; float:left; margin-right:2em; border-radius:00%"/></center> <center><img src="{{ site.url }}{{ site.baseurl }}/img/posts/04/day-buying-rate.png" style="max-width: 50%; float:left; margin-right:2em; border-radius:00%"/></center>
+<center><img src="{{ site.url }}{{ site.baseurl }}/img/posts/04/hour-buying-rate.png" style="max-width: 80%; float:center; margin-right:2em; border-radius:00%"/></center> 
 
-<center><img src="{{ site.url }}{{ site.baseurl }}/img/posts/04/weekday-buying-rate.png" style="max-width: 50%; float:left; margin-right:2em; border-radius:00%"/></center> <center><img src="{{ site.url }}{{ site.baseurl }}/img/posts/04/month-buying-rate.png" style="max-width: 50%; float:left; margin-right:2em; border-radius:00%"/></center>
+We clearly see a pattern among the time figures in relation to the purchase rate. The purchase rate in relation to the time seems to occur more during business hours and not at dawn.
 
-We can clearly see a pattern in Figure \ref{timebuyingrate} of time in relation to purchase mainly in relation to the day of the month (0-31), month of the year, day of the week (Monday, Tuesday, Wednesday, etc.) and the hour
-.
-\subsection{How does the time between sessions affect (dwelltime) purchasing intention?}
+The purchase rate between the days of the week and the month seems to occur linearly. It makes sense since people tend to buy more on the weekend and in certain months.
 
-The time between sessions (\textit{dwelltime}) can say a lot about a user's clicks. If the dwell time is too low, less than a second, it is possible that the session was done by some robot and maybe it cannot lead to a buy. The Figure \ref{dwelltimebuying} shows the relation with buying rate by session. The dwelltime was grouped in range of one hundred for a better visualization.
+<center><img src="{{ site.url }}{{ site.baseurl }}/img/posts/04/weekday-buying-rate.png" style="max-width: 50%; float:left; margin-right:0em; border-radius:00%"/></center> 
 
-\begin{figure}[!h]
-    \centering
-    \includegraphics[scale=0.3]{dwelltime-buying-rate.png}
-    \caption{Dwelltime vs Buying rate}
-    \label{dwelltimebuying}
-\end{figure}
+<center><img src="{{ site.url }}{{ site.baseurl }}/img/posts/04/month-buying-rate.png" style="max-width: 50%; float:left; margin-right:0em; border-radius:00%"/></center>
 
-\subsection{How does the quantity of purchases per item (item rank) affect the purchase rate?}
+Finally, the purchase rate in relation to the day seems to vary without a well-defined pattern.
 
-Item rank is a category created to say how great in value an item was purchased. The higher the rank the more purchased it was. In this subsection we would like to know if the higher the rank the buying rate of item ranks. As expected, the Figure \ref{itemrank} a linear relationship between item rank and buying rate.
 
-\begin{figure}[!h]
-    \centering
-    \includegraphics[scale=0.3]{item-rank-buying-rate.png}
-    \caption{Item Rank vs Buying rate}
-    \label{itemrank}
-\end{figure}
+<center><img src="{{ site.url }}{{ site.baseurl }}/img/posts/04/day-buying-rate.png" style="max-width: 80%; float:center; margin-right:4em; border-radius:00%"/></center>
 
-\subsection{Does the dataset have outliers?}
+
+## How does the time between sessions affect (dwelltime) purchasing intention?}
+
+The time between sessions (dwelltime) can say a lot about a user's clicks. If the dwell time is too low, less than a second, it is possible that the session was done by some robot and maybe it cannot lead to a buy. The next figure shows the relation with buying rate by session. The dwelltime was grouped in range of one hundred for a better visualization.
+
+<center><img src="{{ site.url }}{{ site.baseurl }}/img/posts/04/dwelltime-buying-rate.png" style="max-width: 100%; float:left; margin-right:0em; border-radius:00%"/></center>
+
+## How does the quantity of purchases per item (item rank) affect the purchase rate?
+
+Item rank is a category created to say how great in value an item was purchased. The higher the rank the more purchased it was. In this subsection we would like to know if the higher the rank the buying rate of item ranks. As expected, the  a linear relationship between item rank and buying rate.
+
+<center><img src="{{ site.url }}{{ site.baseurl }}/img/posts/04/item-rank-buying-rate.png" style="max-width: 100%; float:left; margin-right:0em; border-radius:00%"/></center>
+
+
+## Does the dataset have outliers?
 
 To identify outliers we will first make an analysis of the time between sessions (dwelltime) column. Once the dwelltime have very disparate values and because it is also numeric.
 
-\subsubsection{Checking evidence of outliers}
+### Checking evidence of outliers
 First, we will check for evidence with box-plot. As the dwelltime data are very sparse, we will use a logarithmic scale based on 10.
 
-\begin{figure}[!h]
-    \centering
-    \includegraphics[scale=0.2]{scaled-box-plot-dwelltime.png}
-    \caption{Scaled dwelltime Box Plot}
-    \label{boxplot}
-\end{figure}
+<center><img src="{{ site.url }}{{ site.baseurl }}/img/posts/04/scaled-box-plot-dwelltime.png" style="max-width: 100%; float:left; margin-right:0em; border-radius:00%"/></center>
 
-As the Figure \ref{boxplot} shows, the points before the first and third quartiles are possibly outliers.
+As the Figure above shows, the points before the first and third quartiles are possibly outliers.
 
-\subsubsection{Finding outliers with z-scores}
+### Finding outliers with z-scores
 To detect z-scores, we use the scipy library and filter all clicks with an absolute z-score value greater than three.
 
-The image \ref{outliersdist} shows how the instances are distributed in percent.
+The image below shows how the instances are distributed in percent.
 
-\begin{figure}[!h]
-    \centering
-    \includegraphics[scale=0.3]{z-score-distribution.png}
-    \caption{Outliers distribution by $z-score \geq 3$}
-    \label{outliersdist}
-\end{figure}
+<center><img src="{{ site.url }}{{ site.baseurl }}/img/posts/04/z-score-distribution.png" style="max-width: 100%; float:left; margin-right:0em; border-radius:00%"/></center>
 
+After detecting the instances, we plot the points with outliers graphically. For this, we use the relationship between item_rank versus dwelltime. As you can see in the image above the data is very dispersed and in a way it seems that outliers are the majority but are not. This only happens because there is a very large number of clicks.
 
-After detecting the instances, we plot the points with outliers graphically. For this, we use the relationship between item\_rank versus dwelltime. As you can see in the image \ref{outliersvi} the data is very dispersed and in a way it seems that outliers are the majority but are not. This only happens because there is a very large number of clicks.
-
-\begin{figure}[!h]
-    \centering
-    \includegraphics[scale=0.3]{z-score-visualization.png}
-    \caption{Outliers visualization with item\_rank vs dwelltime}
-    \label{outliersvi}
-\end{figure}
+<center><img src="{{ site.url }}{{ site.baseurl }}/img/posts/04/z-score-visualization.png" style="max-width: 100%; float:left; margin-right:0em; border-radius:00%"/></center>
 
 
-\section{Results}
+## Results
 
 After the analysis we can conclude that:
 
- The data is extremely unbalanced in terms of buyers and non-buyers.
- The sessions length vary a lot in size but most of them are in the top 20.
- Very large sessions (over than 120) do not make purchases.
- Time is related to purchasing rate.
- At early morning and in the morning an user is less likely to buy.
- On weekdays, a product is more likely to be purchased on weekends.
- In May, June and July there were no purchases.
- Days of the month and dwelltime vary on the purchase rate.
- The higher the item\_rank the greater the likelihood of purchase.
- The dataset possibly has outliers.
+    + The data is extremely unbalanced in terms of buyers and non-buyers.
+    + The sessions length vary a lot in size but most of them are in the top 20.
+    + Very large sessions (over than 120) do not make purchases.
+    + Time is related to purchasing rate.
+    + At early morning and in the morning an user is less likely to buy.
+    + On weekdays, a product is more likely to be purchased on weekends.
+    + In May, June and July there were no purchases.
+    + Days of the month and dwelltime vary on the purchase rate.
+    + The higher the item_rank the greater the likelihood of purchase.
+    + The dataset possibly has outliers.
 
 
-\section{What technologies were used?}
-
-The technologies used were \textit{pandas}, \textit{scitkitlearn}, \textit{matplotlib}, \textit{Google Colab}, \textit{seaborn} and \textit{numpy}.
-
-
-\section{References}
-
-\begin{enumerate}
- Ways to Detect and Remove the Outliers .https://towardsdatascience.com/ways-to-detect-and-remove-the-outliers-404d16608dba
-\noindent How to remove outliers from a Pandas DataFrame in Python. https://kite.com/python/answers/how-to-remove-outliers-from-a-pandas-dataframe-in-python
-\end{enumerate}
-
- --\>
+Thanks you.
