--- a/_posts/2020-08-14-blog-05.md
+++ b/_posts/2020-08-14-blog-05.md
@@ -180,4 +180,9 @@ After the analysis we can conclude that:
     + The dataset possibly has outliers.
 
 
+## Notebooks
+
+You can find the data analysis implementation in this [link](https://github.com/ktakanov/RecSys-2015-DataAnalysis-Notebooks)
+
+
 Thanks you.
