--- a/_posts/2020-08-14-blog-05.md
+++ b/_posts/2020-08-14-blog-05.md
@@ -3,7 +3,7 @@ layout: post
 title: "Analyzing Recsys 2015 e-commerce data."
 date: 2020-08-13 00:00:00 -0400
 background: "/img/posts/04/background.png"
-categories: pensamentos
+categories: datascience
 ---
 
 # Analyzing Recsys 2015 e-commerce data.
