--- a/_posts/2020-08-14-blog-06.md
+++ b/_posts/2020-08-14-blog-06.md
@@ -6,6 +6,9 @@ background: "/img/background.png"
 categories: datascience
 ---
 
+<center><img src="{{ site.url }}{{ site.baseurl }}/img/posts/06/overunder.png" style="max-width: 100%; float:left; margin-right:0em; border-radius:00%"/></center>
+
+
 # Entendendo viés e variância de forma intuitiva e interativa. #mini-article
 Olá, pessoal, nesse mini-article irei comentar dois conceitos super importantes na área de ciência dos dados, viés (bias) e variância (variance). 
 
